# site

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  build.rs  domain.rs  main.rs  routes.rs
src/components/: list.rs  mod.rs  project_list.rs  word_list.rs
src/functions/: blog_source.rs  mod.rs  project_source.rs  projects.json
src/pages/: blog.rs  home.rs  mod.rs
src/partials/: footer.rs  header.rs  mod.rs
