[package]
name = "site"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
yew-router = "0.17.0"
contentful = "0.7.7"
wasm-bindgen-futures = "0.4.37"

[build-dependencies]
dotenv-build = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
]
